Fix to sizing issue on contact page, reorganized grid so text wouldn't overlap on medium screens

--- a/client/src/components/Contacts/style.css
+++ b/client/src/components/Contacts/style.css
@@ -27,7 +27,7 @@
 .network-box {
   width: 175px;
   height: 150px;
-  margin-top: 2%;
+  margin-top: 8%;
   background: #2D2D2D;
   border: 2px;
   border-color: #FF5C62;
@@ -42,6 +42,7 @@
 
 .header-text {
   padding-top: 3.5%;
+  padding-left: 5%;
   font-size: 1.25rem;
 }
 
@@ -50,10 +51,6 @@
   margin: 4.5%;
   margin-right: 6%;
   margin-left: 12%;
-}
-
-.text-container {
-  min-width: 845px;
 }
 
 .network-counter {
